[package]
name = "ilmen-green"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
dotenv = "0.15"
log = "0.4.22"
env_logger = "0.11.5"
ratatui = "0.29.0"
